--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,12 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
   "semi": false,
-  "printWidth": 80
+  "singleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "fluid": false,
+  "arrowParens": "always"
 }
